# prime-tower-clocks

./: .gitignore  LICENSE  Makefile  README.md  cli.py  examples.md  jsonl_validation.py  prime_tower_clocks.py  ptc_bin.py  ptc_convert.py  ptc_jsonl.py  ptc_model.py  pyproject.toml  reconstruct.py  run_monsters.py  tower_dict.py
.github/workflows/: ci.yml
docs/: bench.md  bench_md_stub.md  classic.md  examples.md  examples_big_monster.md
tests/: _helpers.py  test_cli_dispatch_convert.py  test_cli_presets.py  test_jsonl_integration.py  test_ptc_convert.py  test_ptc_convert_multi_dict.py  test_ptc_core.py  test_ptc_jsonl.py  test_ptcbin_crc.py  test_ptcbin_roundtrip.py  test_step3_minimal.py
tools/: bench_pack.py  run_monsters.sh
tools/data/: monsters.txt
