[project]
name = "prime-tower-clocks"
version = "0.1.0"
description = "Modular signatures of integers via prime clocks and CRT"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []
